# phoenix

./: LICENSE  README.md
phoenix/: .gitignore  CMakeLists.txt  main.cpp  process_results.py
phoenix/_torch/: mlp.py  train.py  train_adult.py
phoenix/_torch/datasets/: abstract_dataset.py  adult_full.py
phoenix/configs/: adult_mlp2.json  cifar_mlp3.json  mnist_mlp2.json  mnist_mlp2_0.75.json  mnist_mlp2_1.0.json  mnist_mlp2_1.5.json  mnist_mlp2_uniform_for_L1.json
phoenix/configs/scaling/: datasz_double.json  datasz_half.json  layers_less.json  layers_more.json  width_double.json  width_half.json
phoenix/linalg/: README.md  linalg.cpp  linalg.h
phoenix/nn/: dataloader.cpp  dataloader.h  dense_layer.cpp  dense_layer.h  learnable_square.cpp  learnable_square.h  mlp.cpp  mlp.h
phoenix/scripts/: run_adult_mockseal.sh  run_adult_seal.sh  run_cifar_mockseal.sh  run_cifar_seal.sh  run_mnist_mockseal.sh  run_mnist_seal.sh
phoenix/smoothing/: argmax.h  corrupt.h  sgn.cpp  sgn.h  stats.h  violations.h
phoenix/utils/: ckks_manager.cpp  ckks_manager.h  helpers.h  mock_seal.h  rapidcsv.h
phoenix/utils/jsoncpp/: json.h
phoenix/weights/: adult_mlp2.csv  mnist_mlp2_0.5.csv  mnist_mlp2_0.75.csv  mnist_mlp2_1.0.csv  mnist_mlp2_1.5.csv  mnist_mlp2_uniform_2.0.csv
phoenix/weights/scaling/: mlp2_layers_less.csv  mlp2_layers_more.csv  mlp2_width_double.csv  mlp2_width_half.csv
